assets/css/style.less
/* Main */
*,
*::before,
*::after {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    overflow-x: hidden;
    
}

html {
    margin: 0;
    font-size: 62.5%;
}

body {
    font-family: Arvo, serif;
    margin: 0;
}

/******** GLOBALS ********/

/* fonts */
@small: 1.4rem;
@small-meduim: 1.8rem;
@medium: 2.2rem;
@medium-large: 3.0rem;
@large: 3.5rem;
@extra-large: 4.5rem;

.font-small {
    font-size: @small  !important;
}

.font-small-meduim {
    font-size: @small-meduim;
}

.font-meduim {
    font-size: @medium  !important;
}

/* colors */
@portocal: #f05f40;
@silver: #cccaca;
@dark: #494b4c;
@dark-silver: #666666;
@white: #fff;
@section-bg: #f3f1f152;

.text-portocal {
    color: @portocal;
}

.text-silver {
    color: @silver;
}

.text-dark:hover {
    color: @dark;
}

.text-faded {
    color: hsla(0, 0%, 100%, 0.7);
}

/* headings */
.heading-section {
    font-size: @large;
    color: @dark-silver;
    padding-top: 80px;
}

/* borders */
.bottom-bordered {
    border-bottom: 1px solid @silver;
}

.double-bordered {
    border-bottom: 1px solid @silver;
    border-top: 1px solid @silver;
}

/* sections */
.box-section {
    min-height: 100vh;
    .bottom-bordered();
}

/* headers */
.box-section-header {
    font-size: @large;
    text-transform: uppercase;
    color: @dark;
}

/* hr */
hr {
    max-width: 50px;
    border-width: 3px;
    border-color: @portocal;
}

.nav-link {
    padding-top: 0px !important;
}

.nav-link:hover {
    color: @portocal  !important;
}

/******** MAIN ********/

/* particles  */
#particles-js {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: 50% 50%;
    background-repeat: no-repeat;
}

/* navbar */
.navbar>.container,
.navbar>.container-fluid {
    justify-content: center !important;
    flex-wrap: nowrap !important;
    padding-top: 10px;
}


.navbar.navbar.fixed-top.fixed-theme {
    background-color: @white;
    border-color: @white;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
}

.navbar-container.fixed-theme {
    padding: 5px;
}

.navbar.navbar.fixed-top,
.navbar.navbar.fixed-top.fixed-theme,
// .navbar-brand.fixed-theme,
.navbar-container.fixed-theme,
.navbar.navbar-fixed-top.fixed-theme,
.navbar-container,
.header-item {
    transition: 0.3s;
    -webkit-transition: 0.3s;
}


@media (max-width: 768px) {
    #header-items-container>.header-item>a {
        font-size: 15px !important;
    }

    #header-items-container>.header-item>i {
        font-size: 15px !important;
    }

    #navbar #header-items-container .header-item {
        padding: 0px 0px !important;
    }
}

#navbar {
    #header-items-container {
        display: -ms-flexbox;
        display: flex;
        -ms-flex-direction: row;
        flex-direction: row;
        margin-bottom: 0;
        padding-left: 0px !important;
        list-style: none;

        .header-item {
            text-align: center;
            padding: 0px 15px;

            a,
            i {
                color: @silver;
                font-size: 19px;
            }
        }
    }

    #header-items-container.fixed-theme {
        .header-item {

            a,
            i {
                color: @portocal;
                font-size: 18px;
            }

            a:hover {
                color: @silver  !important;
            }
        }
    }
}

/* github vertical link */
#github-container {
    position: absolute;
    left: -59px;
    bottom: 44px;
    transform: rotate(37deg);
    background-color: #fff;
    min-width: 241px;
    font-size: 1.6rem;
    line-height: 2.8rem;
    text-align: center;
    z-index: 1040 !important;
    background: @section-bg;
    transition: 0.5s ease-in;

    a:hover {
        color: @portocal  !important;
        text-decoration: none;
    }
}

#github-container.fixed-theme {
    opacity: 0;
}

@media (max-width: 800px) {
    #github-container {
        display: none;
    }
}

/* head section */
#head {
    .box-section();
    width: 100%;
    background-image: url("../../assets/img/background.jpg");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-family: Arvo, serif;

    h1 {
        margin: 0;
        letter-spacing: 0.2rem;
    }

    .title-head {
        margin-top: -80px;
        font-size: @extra-large;
    }

    .subtitle {
        font-size: @small - 0.2rem;

    }

    .btn-head {
        z-index: 100;
        width: 140px;
        font-size: @medium;
        margin-top: 15px;
        text-shadow: 0.5px 0.5px rgba(0, 0, 0, 0.45);
        background-color: rgba(50, 40, 40, 0.34);
        border-radius: 3px;
        letter-spacing: 0.2rem;
        border-color: @portocal;
    }

    .btn-head:hover {
        background-color: rgba(204, 202, 202, 0.3);
    }

    @media (min-width: 768px) {
        .title-head {
            font-size: 7rem;
        }

        .subtitle {
            font-size: @small;
            font-weight: 100;
        }
    }
}

/* software skill section */
.skill {
    background: #f3f1f152;

    .block {
        transition: all 200ms ease;
        padding: 2.5rem;
        background: #fff;
        border: 1px solid #ebecec;
        border-radius: 0px;
        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
        margin-bottom: 1.6rem;

        img {
            display: block;
            max-width: 60px;
            margin: 0 auto;
            height: auto;
        }

        h3 {
            font-size: 1.6rem !important;
        }
    }

    .block:hover {
        -webkit-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1) inset;
        box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1) inset;
    }
}


/* find-me section */
#find-me {
    min-height: 450px;
    .bottom-bordered();
    padding-bottom: 50px;

    .link-find:hover {
        color: #f05f40 !important;
        text-decoration: none;
    }
}

/* portfolio gallery section */
#portfolio {
    .container-fluid {
        width: 60%;
        padding-right: 15px;
        padding-left: 15px;
        margin-right: auto;
        margin-left: auto;

        .no-gutters {
            margin-right: 0;
            margin-left: 0;
            margin-bottom: 60px;

            .portfolio-box {
                position: relative;
                display: block;
                max-width: 650px;
                margin: 0 auto;
            }

            .portfolio-box:focus {
                outline: none;
            }

            .img-fluid,
            .img-thumbnail {
                max-width: 100%;
                height: auto;
            }

            img,
            svg:not(:root) {
                vertical-align: middle;
            }

            img {
                border-style: none;
            }

            .portfolio-box .portfolio-box-caption {
                position: absolute;
                bottom: 0;
                display: block;
                width: 100%;
                height: 100%;
                text-align: center;
                opacity: 0;
                color: #fff;
                background: rgba(240, 95, 64, 0.9);
                transition: all 0.2s;
            }

            .portfolio-box:hover {

                .portfolio-box-caption {
                    opacity: 1;
                }
            }

            .portfolio-box-caption-content {
                position: absolute;
                top: 50%;
                width: 100%;
                -webkit-transform: translateY(-50%);
                transform: translateY(-50%);
                text-align: center;

                .project-category {
                    font-size: @small;
                    font-weight: 600;
                    text-transform: uppercase;
                }

                .project-name {
                    font-size: 22px;
                }
            }
        }
    }
}

/* loader */
/*LOADER*/
.loader-wrapper {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, 1);
    z-index: 1050;
}

.loader-wrapper.ng-hide-add,
.loader-wrapper.ng-hide-remove {
    transition: .5s ease-in-out;
    opacity: 1;
}

.loader-wrapper.ng-hide {
    transition: .5s ease-in-out;
    opacity: 0;
}

.loader {
    width: 250px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    font-family: helvetica, arial, sans-serif;
    text-transform: uppercase;
    font-weight: 900;
    color: @portocal;
    letter-spacing: 0.2em;
}

.loader::before,
.loader::after {
    content: "";
    display: block;
    width: 15px;
    height: 15px;
    background: @portocal;
    position: absolute;
    -webkit-animation: load .7s infinite alternate ease-in-out;
    animation: load .7s infinite alternate ease-in-out;
}

.loader::before {
    top: 0;
}

.loader::after {
    bottom: 0;
}

@-webkit-keyframes load {
    0% {
        left: 0;
        height: 30px;
        width: 15px;
    }

    50% {
        height: 8px;
        width: 40px;
    }

    100% {
        left: 235px;
        height: 30px;
        width: 15px;
    }
}

@keyframes load {
    0% {
        left: 0;
        height: 30px;
        width: 15px;
    }

    50% {
        height: 8px;
        width: 40px;
    }

    100% {
        left: 235px;
        height: 30px;
        width: 15px;
    }
}

